# SORAK

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  components.json  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tsconfig.build-check.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
app/: globals.css  manifest.ts  not-found.tsx
app/[locale]/: layout.tsx  not-found.tsx
app/api/creators/: route.ts
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile
contracts/scripts/: deploy.sh
contracts/sorak-milestone/: Cargo.toml
contracts/sorak-milestone/src/: error.rs  lib.rs  storage.rs  test.rs
contracts/sorak-milestone/test_snapshots/test/: initialize_sets_admin_and_token.1.json  tip_below_tier_one_stays_tier_zero.1.json  tip_crossing_fifty_returns_tier_one.1.json  tip_crossing_five_hundred_returns_tier_three.1.json  tip_crossing_hundred_after_tier_one_returns_tier_two.1.json  tip_without_new_tier_returns_zero.1.json  total_given_accumulates_across_calls.1.json  two_supporters_keep_independent_totals_and_tiers.1.json  zero_amount_is_rejected.1.json
drizzle/: 0000_large_synch.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
messages/: en.json  vi.json
public/: sw.js
scripts/: fetch-anchors.ts  generate-pwa-icons.mjs  replay-evm-tx.mjs  seed-demo.ts  send-base-usdc.mjs  shots-landing.mjs  smoke.sh  smoke.ts  test-nonce.mjs
src/i18n/: config.ts
tests/: setup.ts
tests/e2e/: main-flow.spec.ts  prod-real.spec.ts
tests/server/: helpers.ts
tests/ui/: sorak-components.test.tsx
(+142 files in other folders)
